# GroundWire

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/plans/: phrase1-actual.md
docs/: supabase_schema.sql
groundwire/: __init__.py  client.py  core.py  demo.py  evals.py  guardrails.py  hardener.py  healer.py  llm_utils.py  memory.py  openai_validator.py  requirements.txt  schemas.py  shared_memory.py  supabase_schema.sql  validator.py
