[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundwire"
version = "0.1.0"
description = "Reliability middleware for web agents — memory, validation, guardrails, evals"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
# Enable cross-agent shared memory: pip install -e ".[shared]"
shared = ["supabase>=2.0.0"]

[tool.setuptools]
packages = ["groundwire"]
